@@ -1,3 +1,8 @@
+2015-05-11  carl  <cth@carlh.net>
+
+	* Hopefully fix truncated text in the colour conversion
+	dialog on OS X.
+
 2015-05-10  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.78.12 released.
